discussion/kv_engine/177202/177202_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Remove loop from metering tests

Change-Id: I8f148ddd2dba7ad9b3ebbbca6bdafbad6ce8b9e4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-07-07 12:37:45.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-07 13:34:19.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47643/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp_serverless/metering_test.cc(1197): error C2660: "cb::test::MeteringTest::upsert": function does not take 5 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47643/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18834/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:1197:50: error: too many arguments to function call, expected at most 4, have 5 [clang-diagnostic-error]
    upsert("MeterGetRandomKey", "hello", {}, {}, true);
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:64:1: note: "upsert" declared here
void MeteringTest::upsert(std::string id,
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18834/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:1197:50:
error: too many arguments to function call, expected at most 4, have 5 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18834/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8614/ : FAILURE

Compile error at [2022-07-07T12:48:03.644Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:1197:54:
error: no matching function for call to ?cb::test::MeteringTest_MeterGetRandomKey_Test::upsert(const char [18], const char [6], <brace-enclosed initializer list>, <brace-enclosed initializer list>, bool)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8614/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8516/ : FAILURE

Compile error at [2022-07-07T13:27:21.186Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/metering_test.cc:1197:50:
error: too many arguments to function call, expected at most 4, have 5
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8516/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19973/ : FAILURE

Compile error at [2022-07-07T13:26:58.069Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/metering_test.cc:1197:50:
error: too many arguments to function call, expected at most 4, have 5
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19973/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20732/ : FAILURE

Compile error at [2022-07-07T13:31:44.924Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp_serverless/metering_test.cc:1197:54:
error: no matching function for call to ?cb::test::MeteringTest_MeterGetRandomKey_Test::upsert(const char [18], const char [6], <brace-enclosed initializer list>, <brace-enclosed initializer list>, bool)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20732/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21086/ : FAILURE

Compile error at [2022-07-07T13:30:03.060Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:1197:54:
error: no matching function for call to ?cb::test::MeteringTest_MeterGetRandomKey_Test::upsert(const char [18], const char [6], <brace-enclosed initializer list>, <brace-enclosed initializer list>, bool)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21086/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21776/ : FAILURE

Compile error at [2022-07-07T13:32:09.959Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:1197:50:
error: too many arguments to function call, expected at most 4, have 5
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21776/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29129/ : FAILURE

Compile error at [2022-07-07T13:33:52.911Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp_serverless/metering_test.cc:1197:50:
error: too many arguments to function call, expected at most 4, have 5
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29129/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17991/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40020/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-07-12 13:50:18.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
